Fixed conclusion/acknowledgement screen cutoff

--- a/src/app/conclusion-ack/conclusion-ack.component.css
+++ b/src/app/conclusion-ack/conclusion-ack.component.css
@@ -1,5 +1,5 @@
 .title {
-  font-size: 3em;
+  font-size: 2em;
 }
 
 .content {
